--- a/css/main.scss
+++ b/css/main.scss
@@ -128,8 +128,10 @@ body
 
   .cart__item 
   {
-    display: flex;
-    justify-content: space-between;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: space-around;
     margin-bottom: 10px;
   }
 
