--- a/css/main.scss
+++ b/css/main.scss
@@ -130,8 +130,8 @@ body
   {
     width: 100%;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    justify-content: space-around;
+    grid-template-columns: repeat(4, 1fr);
+    align-items: center;
     margin-bottom: 10px;
   }
 
